<resources>
    <string name="app_name">RiskAssessment</string>
    <string name="enter_app_title_hint">Please enter the title of the app...</string>
    <string name="query_button_text">Risk Assessment please!</string>
    <string name="greeting">Hi there! Here\'s where you share an app to get a Risk Assessment!</string>
    <string name="whyYouNoLinkToApp">You didn\'t share a Play Store app\'s page though.  Check yo self before you wreck yo self, fool.</string>
    <string name="sentRequest">Just sent the app to our server! Hang tight!</string>
    <string name="assRecvd">Just received the assessment!</string>
    <string name="assessment">Here\'s your risk assessment. Below are the points contributed by each section.</string>
    <string name="TAG_APP_NAME">App Name: %1$s</string>
    <string name="TAG_RISK_FACTORS">Risk Factors</string>
    <string name="TAG_KNOWN_MALWARE">Known Malware: </string>
    <string name="TAG_MALWARE_PRESENT">\tPresent: %1$s</string>
    <string name="TAG_MALWARE_WEIGHT">\tWeight: %1$s</string>
    <string name="TAG_REQUESTS_ROOT">Requests root:</string>
    <string name="TAG_RR_PRESENT">\tPresent: %1$s</string>
    <string name="TAG_RR_WEIGHT">\tWeight: %1$s</string>
    <string name="TAG_RF_WEIGHT">Total weight of Risk Factors: %1$s</string>
    <string name="TAG_RF_WEIGHT_RATIO">Weight ratio of Risk Factors: %1$s</string>
    <string name="TAG_RF_TOTAL">Total points contributed: %1$s</string>
    <string name="TAG_PERMISSION_DANGERS">Dangerous Permissions:</string>
    <string name="TAG_LOCATION_DANGER">\tLocation Access: %1$s</string>
    <string name="TAG_DP_TOTAL">Total points contributed: %1$s</string>
    <string name="TAG_OVERALL">Overall Score: %1$s</string>
    <string name="TAG_RATING">Rating: %1$s</string>
</resources>
